update config file again
Try to get this working

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
     steps:
       - checkout
       - aws-cli/setup:
-          profile-name: example
-      - run: echo "Run your code here"
+      - run: aws s3 ls
 
 workflows:
   version: 2
