--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,14 @@
 version: 2.1
-
 orbs:
-  aws-cli: circleci/aws-cli@1.3.2
-
+  node: circleci/node@1.1
 jobs:
-  aws-cli-example:
-    executor: aws-cli/default
+  build:
+    executor:
+      name: node/default
+      tag: '10.4'
     steps:
       - checkout
-      - aws-cli/setup:
-      - run: aws s3 ls
-
-workflows:
-  version: 2
-  aws-cli:
-    jobs:
-      - aws-cli-example:
-          context: aws
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: npm run test
