--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1
+  aws-cli: circleci/aws-cli@1.3.2
 jobs:
   build:
     executor:
@@ -8,7 +8,7 @@ jobs:
       tag: '10.4'
     steps:
       - checkout
-      - node/with-cache:
+      - aws-cli/setup:
           steps:
-            - run: npm install
-      - run: npm run test
+            - run: aws s3 ls
+      - run: aws s3 ls
