--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,19 @@
-version: 2.1
-orbs:
-  aws-cli: circleci/aws-cli@1.3.2
 jobs:
-  build:
-    executor:
-      name: node/default
-      tag: '10.4'
+  build_deploy:
+    machine:
+      image: ubuntu-2004:202010-01
     steps:
       - checkout
-      - aws-cli/setup:
-          steps:
-            - run: aws s3 ls
+      - run:
+          name: Installing AWS CLI
+          command: |
+            sudo apt-get update
+            sudo apt install python3-pip
+            sudo pip3 install awsebcli --upgrade
       - run: aws s3 ls
+
+workflows:
+  version: 2
+  execute_bulk:
+    jobs:
+      - build_deploy
