--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,29 @@
+version: 2
+
 jobs:
-  build_deploy:
+  build:
     docker:
-      - image: amazon/aws-cli:2.0.6
-        auth: 
-          AWS_ACCESS_KEY: $AWS_ACCESS_KEY
-          AWS_REGION: $AWS_REGION
-          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+      - image: circleci/python:latest
     steps:
-      - checkout
-      - run: |
-          export AWS_ACCESS_KEY_ID=<< parameters.aws_access_key_id >>
-          export AWS_SECRET_ACCESS_KEY=<< parameters.aws_secret_key >>
-      - run: echo $AWS_ACCESS_KEY
+      - run: echo "build"
+  deploy:
+    docker:
+      - image: circleci/python:latest
+    steps:
+      - run: echo "deploy"
 
 workflows:
   version: 2
-  execute_bulk:
+
+  stage_workflow:
     jobs:
-      - build_deploy
+      - build:
+          filters:
+            branches:
+              only: master
+      - deploy:
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
