--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:latest
+      - image: amazon/aws-cli
         auth:
           username: mydockerhub-user
           aws_region: $AWS_REGION 
@@ -11,7 +11,7 @@ jobs:
       - run: echo $AWS_REGION
   deploy:
     docker:
-      - image: circleci/python:latest
+      - image: amazon/aws-cli
     steps:
       - run: echo $AWS_REGION
 
